--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,7 @@ button[type="submit"]:active {
 
 p1, p1::after {
   margin: 0;
-  font-size: 1em;
+  font-size: 1.5rem;
   background: linear-gradient(90deg in lch longer hue, oklch(105% 90% 0) 0 0);
   background-size: 500% 100%;
   animation: blend 30s infinite linear;
